# integration-prototype

./: .dockerignore  .gitignore  .pycodestyle  .pylintrc  .travis.yml  =2.10  CHANGELOG.md  DockerBuild.sh  DockerBuild_bind.sh  Dockerfile  Dockerfile.ARL  Dockerfile.ARL_bind  Jenkinsfile  LICENSE  Pipfile  README.md  TODO.md  deploy.sh  follow_master_controller_logs.sh  get_itango_prompt.sh  kill_sip_container.sh  not_docker_swarm  pbc_kill.sh  pbc_logs.sh  pytest.ini  requirements.txt  setup.cfg  setup.py  sip-master.ipynb  sip_run.py  tear_down.sh  testing_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
Tango-Starter/: README.md  SDPMasterController  TangoTest
common/sip_common/: README.md  docker_paas.py  heartbeat.py  heartbeat_component.py  heartbeat_task.py  logger.py  logging_aggregator.py  logging_api.py  logging_handlers.py  logging_server.py  paas.py  popen_paas.py  resource_manager.py  state_machine.py
common/test/: docker_test.py  heartbeat_test.py  heartbeat_test_send.py  logging_test.py  popen_test.py  resource_manager_test.py  state_machine_test.py  test_logging.py  test_zmq_pub_sub.py
components/: README.md  component.py
dask-docker/: DaskSwarmStart.sh  DaskSwarmStart_bind.sh  DaskSwarmStop.sh  Dockerfile.scheduler  Dockerfile.worker  Dockerfile.worker_bind
demos/: README.md
demos/01_sdp_states/: Dockerfile  README.md  docker-compose.yml  itango_prompt.sh
demos/02_running_a_workflow/: Dockerfile  README.md  demo_prompt.sh  docker-compose.yml  follow_pbc_logs.sh  generate_sbi_config.py  watch_workflow_stages.sh
demos/23_11_18_running_a_workflow/: docker-compose.yml
deploy/: README.md  docker-compose.yml
deploy/ansible-sip/: .gitignore  Vagrantfile  ansible.cfg
deploy/dask_cluster/: README.md  docker-compose.yml
deploy/dask_tests/: Notes.md  README.md  TODO.md
deploy/demos_23_11_18/: README.md  docker-compose.dev.yml  docker-compose.fluentd.yml  docker-compose.yml
deploy/demos_nov22/: README.md  docker-compose.yml
deploy/execution_control/: READMD.md  docker-compose.yml
deploy/oskar-centos7/: Vagrantfile  hosts.vagrant  test_oskar.yml
deploy/portainer/: README.md
doc/: README.md
doc/schema/: .gitignore  processing_block_01.json  scheduling_block_01.json
docker_slave/: Dockerfile  docker_slave.py
docs/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  pb_data_model_v1.0.md  running_workflows.md  sbi_configuration_v2.0.md  sbi_data_model_v1.0.md  workflow_definition_v2.0.md
docs/src/: api.rst  background.rst  conf.py  demos_link.rst  docker_images.md  index.rst  pipenv_usage.md  python_packages.md  quickstart.rst  references.rst  test.md
emulators/: README.md  __init__.py
emulators/csp_pss_sender/: README.md
emulators/csp_pulsar_sender/: __main__.py  pulsar_sender.py
emulators/csp_vis/: Dockerfile  README.md  config.json  send_vis_data.py  send_vis_data_1.json  send_vis_data_2.json
emulators/csp_vis_sender_01/: README.md
emulators/csp_vis_sender_02/: Dockerfile  README.md  docker-compose.yml  docker-stack.yml
emulators/csp_visibility_sender/: .dockerignore  README.md  __main__.py  config.json  heap_streamer.py  send_vis_data.py  simulator.py
examples/alarms/: README.md
examples/fluentd/: Dockerfile  README.md  fluent.conf
examples/graphs/: master.py  slave.py
examples/log_spammer/: Dockerfile  README.md  _version.py  build_docker_image.sh  docker-compose.fluentd.yml  docker-compose.json.yml  docker-compose.p3.hostnet.yml  docker-compose.p3.overlay.yml  docker-compose.p3.yml  docker-compose.yml  log_spammer.py
examples/mc_remote_control/: README.md  rpyc_example.py
examples/tango_docker/: README.md
lib/python/: README.md  heartbeat.py  logger.py  state_machine.py
master/etc/: resources.json  slave_map.json
master/sip_master/: capability.py  config.py  configure.py  heartbeat_listener.py  main.py  master_controller_service.py  master_states.py  rpc_client.py  rpc_service.py  shutdown.py  slave_control.py  slave_map.py  slave_states.py  states.py  task.py  task_control.py  un_configure.py
master_controller/: Configure.py  HeartbeatListener.py  MasterControllerService.py  README.md  UnConfigure.py  _HeartbeatListener.py  __main__.py  __main__.py~  _configure.py  _rpyc_server.py  _rpyc_server.py~  _slave_map.py  _states.py  _unconfigure.py  master_controller.py  slave_map.py  state_machine.py  states.py
mc_remote_control/: rpyc_example.py
modules/: vis_receiver.py
processor_software/: pulsar_search.py  vis_receiver.py
sdoc/: Makefile  about.rst  changelog.rst  conf.py  contents.inc.rst  contents.rst.inc  design.rst  index.rst  installation.rst  introduction.rst  license.rst  quickstart.rst  styleguide.rst
sdoc/api/: common.rst  emulators.rst  emulators_csp_vis.rst  emulators_tm.rst  master.rst  processor_software.rst  sip.rst  sip_api.rst  slave.rst  tasks.rst
sip/: Dockerfile  README.md  __init__.py  _version.py
sip/examples/ctest/: CMakeLists.txt  README.md  main.cpp
sip/science_pipeline_workflows/ingest_visibilities/recv_c/: CMakeLists.txt  Dockerfile  README.md  build_image.sh  note  recv.c  send.py
sip/science_pipeline_workflows/ingest_visibilities/recv_c/gtest/: CMakeLists.txt  README.md
sip/science_pipeline_workflows/ingest_visibilities/recv_c/src/: buffer.c  buffer.h  main.c  receiver.c  receiver.h  stream.c  stream.h  thread_barrier.c  thread_barrier.h  thread_pool.c  thread_pool.h  timer.c  timer.h
sip/science_pipeline_workflows/ingest_visibilities/recv_c/test/: CMakeLists.txt  Tests.cpp
slave/: Dockerfile  README.md
tango/: MasterController.py  README.md
tasks/: exec_eng.py  pulsar_search_task.py  spark_config.json  task.py  task2_jar.py  task2_pyspark.py  vis_receiver_config.json  vis_receiver_task.py
tools/: build_test.sh  download_sip_images.sh  get_itango_prompt.sh  list_requirements.sh  remove_sip_images.sh  run_all_tests.sh  run_c_tests.sh  run_pycodestyle.sh  run_pylint.sh  run_test_coverage.sh  run_tests.sh
tsk-2196/: Dockerfile.buildTangoDB  Dockerfile.rundb  mysql_root_password  notes.bkm  run_mysql.sh  run_tangodb.sh  sources.list
(+1459 files in other folders)
